k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exam-backend
  labels:
    app: exam-backend
spec:
  selector:
    matchLabels:
      app: exam-backend
  replicas: 2 # 告知 Deployment 运行 2 个与该模板匹配的 Pod
  template:
    metadata:
      labels:
        app: exam-backend
    spec:
      containers:
        - name: exam-backend-container
          image: <image-name>
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: 500m
              memory: "128Mi"
          ports:
            - containerPort: 8888
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: exam-backend-service
spec:
  type: NodePort
  selector:
    app: exam-backend
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
      nodePort: 31000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: application-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exam-backend-service
                port:
                  number: 8888
